--- a/ifitness-ui/src/app/activities/activities-list/activities-list.component.html
+++ b/ifitness-ui/src/app/activities/activities-list/activities-list.component.html
@@ -21,7 +21,7 @@
           <tr>
             <td>
               <span class="p-column-title">Usuário</span>
-              {{ activity.user }}
+              {{ activity.user.name }}
             </td>
             <td>
               <span class="p-column-title">Tipo</span>
@@ -29,7 +29,7 @@
             </td>
             <td>
               <span class="p-column-title">Data</span>
-              {{ activity.activity_date }}
+              {{ activity.date }}
             </td>
             <td>
               <span class="p-column-title">Distância</span>
