--- a/ifitness-ui/src/app/core/navbar/navbar.component.html
+++ b/ifitness-ui/src/app/core/navbar/navbar.component.html
@@ -10,8 +10,11 @@
   </div>
 
   <ul class="navbar-menu" [hidden]="!displayingMenu">
-    <li class="navbar-user">Fernando Duarte</li>
-    <li class="navbar-menuitem"><a href="#">Atividades</a></li>
+    <li class="navbar-user">{{ auth.jwtPayload?.name }}</li>
+    <li class="navbar-menuitem" routerLinkActive="active"
+      *ngIf="auth.hasPermission('ROLE_SEARCH_ACTIVITY')">
+      <a routerLink="/activities">Atividades</a>
+    </li>
     <li class="navbar-menuitem"><a href="#">Estatísticas</a></li>
     <li class="navbar-menuitem"><a href="#">Logout</a></li>
   </ul>
