--- a/ifitness-ui/src/app/activities/activities-list/activities-list.component.html
+++ b/ifitness-ui/src/app/activities/activities-list/activities-list.component.html
@@ -60,6 +60,13 @@
           </tr>
         </ng-template>
       </p-table>
+      <ng-template pTemplate="emptymessage" let-columns>
+        <tr>
+          <td>
+             Nenhuma atividade cadastrada.
+          </td>
+        </tr>
+      </ng-template>
     </div>
     <div class="p-col-12">
       <p><a pButton label="Nova Atividade" routerLink="/activities/new"></a></p>
