--- a/ifitness-ui/src/app/core/navbar/navbar.component.css
+++ b/ifitness-ui/src/app/core/navbar/navbar.component.css
@@ -1,10 +1,11 @@
 .navbar {
   padding: 20px 0 10px;
-  background-color: #1e94d2;
+  background-color: #28a745;
 }
 
 .navbar-toggle {
   color: #fff;
+  background-color: #28a745;
 }
 
 .navbar-menu {
@@ -56,4 +57,8 @@
 }
 .navbar-menuitem.active {
    background-color: #494541;
+}
+
+a{
+  background-color: #3a3633;
 }
