--- a/ifitness-ui/src/styles.css
+++ b/ifitness-ui/src/styles.css
@@ -27,3 +27,11 @@ body {
 form .p-button {
   margin-right: .25em;
 }
+
+button,a {
+  background-color: #28a745;
+  color: #fff;
+  border-radius: 5px;
+  border: none;
+  font-size: medium;
+}
