--- a/ifitness-ui/src/app/activities/activities-list/activities-list.component.html
+++ b/ifitness-ui/src/app/activities/activities-list/activities-list.component.html
@@ -1,14 +1,45 @@
 <div class="container">
 
-  <div class="p-col-12">
-    <h1>Atividades Físicas</h1>
-  </div>
+  <form autocomplete="off" (ngSubmit)="search()">
+    <div class="p-grid">
+
+      <div class="p-col-12">
+        <h1>Atividades Físicas</h1>
+      </div>
+
+      <div class="p-col-12 p-md-6 p-fluid">
+        <label>Tipo</label>
+        <p-dropdown name="type" [options]="types" placeholder="Selecione"
+        [(ngModel)]="filter.type"></p-dropdown>
+      </div>
+      <br>
+      <div class="p-col-12">
+        <label style="display: block">Data</label>
+
+        <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '95px' }" name="initialDate"
+          [(ngModel)]="filter.initialDate"></p-calendar>
+
+        <label class="label"> até </label>
+        <p-calendar dateFormat="dd/mm/yy" [inputStyle]="{ width: '95px' }" name="finalDate"
+          [(ngModel)]="filter.finalDate"></p-calendar>
+      </div>
+      <br>
+      <div class="p-col-12">
+        <button pButton type="submit" label="Pesquisar"></button>
+      </div>
+      <br>
+    </div>
+  </form>
 
   <div class="p-grid">
     <div class="p-col-12">
-      <p-table [value]="activities" responsiveLayout="stack" [breakpoint]="'768px'">
+      <p-table [value]="activities" responsiveLayout="stack" [breakpoint]="'768px'"
+        [paginator]="true" [rows]="filter.itensPerPage"
+        [lazy]="true" [totalRecords]="totalRecords"
+        (onLazyLoad)="whenChangePage($event)">
         <ng-template pTemplate="header">
           <tr>
+            <th>Usuário</th>
             <th>Tipo</th>
             <th>Data</th>
             <th>Distância</th>
@@ -18,6 +49,10 @@
         </ng-template>
         <ng-template pTemplate="body" let-activity>
           <tr>
+            <td>
+              <span class="p-column-title">Usuário</span>
+              {{ activity.user.name }}
+            </td>
             <td>
               <span class="p-column-title">Tipo</span>
               <span *ngIf="activity.type === 'CORRIDA'">
@@ -48,16 +83,15 @@
             <td class="col-actions">
               <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"
                 [routerLink]="['/activities', activity.id]"></a>
-                <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"
-                (click)="confirmRemoval(activity)"
-                [disabled]="!auth.hasPermission('ROLE_REMOVE_ACTIVITY')"></button>
+              <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"
+                (click)="confirmRemoval(activity)" [disabled]="!auth.hasPermission('ROLE_REMOVE_ACTIVITY')"></button>
             </td>
           </tr>
         </ng-template>
         <ng-template pTemplate="emptymessage" let-columns>
           <tr>
             <td>
-               Nenhuma atividade cadastrada.
+              Nenhuma atividade cadastrada.
             </td>
           </tr>
         </ng-template>
